# ml-kafka-rust

./: README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_template.md  epic_template.md  feature_template.md  task_template.md
.github/issue_template/: bug_template.md  epic_template.md
data-generator/: README.md  pyproject.toml
data-generator/data_generator/: __main__.py
data-generator/data_generator/services/: producer.py  sender.py
data-generator/docker/containers/: Dockerfile
data-generator/docker/devops/: build.sh  run.sh
data-generator/tests/: test_data_generator.py  test_init.py
data-generator/tests/services/: test_sender.py
etl/: README.md  pyproject.toml
etl/docker/containers/: Dockerfile
etl/docker/devops/: build.sh  run.sh
etl/etl/: __main__.py
etl/etl/services/: __init__.py  consumer.py  inferencer.py  loader.py  transformer.py
