[tool.poetry]
name = "data-generator"
version = "0.1.0"
description = ""
authors = ["Nicola Massarenti <nicola.massarenti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
typer = {extras = ["all"], version = "^0.7.0"}
loguru = "^0.6.0"
requests = "^2.28.1"
confluent-kafka = "^1.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.10.0"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
